product/app/src/main/resources/kube/kube-product-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: product
  namespace: example
  labels:
  	name: example
  	app: example
spec:
  selector:
    name: example
    app: example
  type: NodePort
  ports:
  - name: api
    port: 8080
